2003-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/gimp-print.xml: Added an entry for GIMP-Print which does
	  not generate PPD files. The PPD files are provided by the
	  GIMP-Print package. The printer list of this entry can be
	  updated using the foomatic-printermap-to-gimp-print-xml from the
	  foomatic-db-engine package.

	* printer/Canon-BJ-30.xml, printer/Canon-BJC-1000.xml,
	  printer/Canon-BJC-2000.xml, printer/Canon-BJC-2010.xml,
	  printer/Canon-BJC-210.xml, printer/Canon-BJC-2100.xml,
	  printer/Canon-BJC-2110.xml, printer/Canon-BJC-240.xml,
	  printer/Canon-BJC-250.xml, printer/Canon-BJC-3000.xml,
	  printer/Canon-BJC-4300.xml, printer/Canon-BJC-4400.xml,
	  printer/Canon-BJC-50.xml, printer/Canon-BJC-55.xml,
	  printer/Canon-BJC-6000.xml, printer/Canon-BJC-6100.xml,
	  printer/Canon-BJC-6200.xml, printer/Canon-BJC-6500.xml,
	  printer/Canon-BJC-7000.xml, printer/Canon-BJC-7100.xml,
	  printer/Canon-BJC-80.xml, printer/Canon-BJC-85.xml,
	  printer/Canon-S300.xml, printer/Canon-S400.xml,
	  printer/Canon-S450.xml, printer/Canon-S4500.xml,
	  printer/Canon-S500.xml, printer/Canon-S800.xml,
	  printer/Epson-CL_700.xml, printer/Epson-CL_750.xml,
	  printer/Epson-CL_760.xml, printer/Epson-EM_900C.xml,
	  printer/Epson-EM_900CN.xml, printer/Epson-EM_930C.xml,
	  printer/Epson-EM_930CN.xml, printer/Epson-MC_10000.xml,
	  printer/Epson-MC_2000.xml, printer/Epson-MC_5000.xml,
	  printer/Epson-MC_7000.xml, printer/Epson-MC_9000.xml,
	  printer/Epson-MJ_5100C.xml, printer/Epson-MJ_6000C.xml,
	  printer/Epson-MJ_8000C.xml, printer/Epson-MJ_930C.xml,
	  printer/Epson-PM_10000.xml, printer/Epson-PM_2000C.xml,
	  printer/Epson-PM_2200C.xml, printer/Epson-PM_3000C.xml,
	  printer/Epson-PM_3300C.xml, printer/Epson-PM_3500C.xml,
	  printer/Epson-PM_3700C.xml, printer/Epson-PM_4000PX.xml,
	  printer/Epson-PM_5000C.xml, printer/Epson-PM_7000C.xml,
	  printer/Epson-PM_700C.xml, printer/Epson-PM_730C.xml,
	  printer/Epson-PM_740C.xml, printer/Epson-PM_750C.xml,