@@ -17,6 +17,10 @@
     is broken in the versions 1.0.2 and older. This is fixed in
     1.0.3.&lt;p&gt;
 
+    From version 1.1 on the Dye Sublimation mode is fully supported. The
+    VPhoto mode is also implemented but its halftoning is not optimized
+    yet.&lt;p&gt;
+
   </en>
  </comments>
  <printers>
