@@ -73,18 +73,18 @@
     </ev_shortname>
     <ev_driverval>RasterCassette</ev_driverval>
    </enum_val>
-   <enum_val id="ev/ppmtomd-ColorMode-MultiColour">
+   <enum_val id="ev/ppmtomd-ColorMode-MColour">
     <ev_longname>
      <en>More than 4 colours, colours one page at a time</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>MultiColour</en>
+     <en>MColour</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>MultiColour</ev_driverval>
+    <ev_driverval>MColour</ev_driverval>
    </enum_val>
    <enum_val id="ev/ppmtomd-ColorMode-Black">
     <ev_longname>
