@@ -60,5 +60,18 @@
     </ev_shortname>
     <ev_driverval>Photo</ev_driverval>
    </enum_val>
+   <enum_val id="ev/ppmtomd-ColourCorrection-DyeSub">
+    <ev_longname>
+     <en>Dye Sublimation</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>DyeSub</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>DyeSub</ev_driverval>
+   </enum_val>
   </enum_vals>
 </option>
