@@ -1,0 +1,311 @@
+<option type="enum" id="opt/ppmtomd-MediaType">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>Media Type</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>MediaType</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_group>General</arg_group>
+   <arg_order>100</arg_order>
+   <arg_spot>C</arg_spot>
+   <arg_substitution />
+   <arg_proto> -media %s</arg_proto>
+  </arg_execution>
+  <constraints>
+     <constraint sense="true">
+      <driver>ppmtomd</driver>
+      <arg_defval>ev/ppmtomd-MediaType-Normal</arg_defval>
+     </constraint>
+  </constraints>
+  <enum_vals>
+   <enum_val id="ev/ppmtomd-MediaType-Normal">
+    <ev_longname>
+     <en>Normal Paper</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Normal</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>PlainPaper</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-NormalDoublePrint">
+    <ev_longname>
+     <en>Normal Paper (printed twice)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>NormalDoublePrint</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>FinePlainPaper</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-Laser">
+    <ev_longname>
+     <en>Laser Printing Paper</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Laser</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>LaserPaper</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-DyeSub">
+    <ev_longname>
+     <en>Dye Sublimation Paper</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>DyeSub</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>DyeSubPaper</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-DyeSubLabel">
+    <ev_longname>
+     <en>Dye Sublimation Labels</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>DyeSubLabel</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>DyeSubLabel</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-VPhoto">
+    <ev_longname>
+     <en>VPhoto Film</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>VPhoto</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>VPhotoFilm</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-VPhotoCard">
+    <ev_longname>
+     <en>VPhoto Cards</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>VPhotoCard</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>VPhotoCard</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-Transparency">
+    <ev_longname>
+     <en>Transparencies</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Transparency</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>OHP</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-TransparencyDoublePrint">
+    <ev_longname>
+     <en>Transparencies (printed twice)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>TransparencyDoublePrint</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>FineOHP</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-TransparencySpecial">
+    <ev_longname>
+     <en>Transparencies (with special inks)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>TransparencySpecial</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>SpecialOHP</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-TransparencySpecialDoublePrint">
+    <ev_longname>
+     <en>Transparencies (with special inks, printed twice)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>TransparencySpecialDoublePrint</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>FineSpecialOHP</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-Cardboard">
+    <ev_longname>
+     <en>Cardboard</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Cardboard</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>Cardboard</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-PostCard">
+    <ev_longname>
+     <en>Post Card</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>PostCard</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>PostCard</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-IronOn">
+    <ev_longname>
+     <en>Iron-On Transfers</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>IronOn</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>IronSheet</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-IronOnOHP">
+    <ev_longname>
+     <en>Iron-On Transfers (with OHP inks)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>IronOnOHP</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>SpecialIron</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-BackPrintFilm">
+    <ev_longname>
+     <en>Back Print Film</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>BackPrintFilm</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>BackPrint</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-BackPrintFilmDoublePrint">
+    <ev_longname>
+     <en>Back Print Film (printed twice)</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>BackPrintFilmDoublePrint</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>FineBackPrint</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-Glossy">
+    <ev_longname>
+     <en>Glossy Paper</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Glossy</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>GlossyPaper</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-GlossyLabel">
+    <ev_longname>
+     <en>Glossy Labels</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>GlossyLabel</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>GlossyLabel</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-LabecaSheet">
+    <ev_longname>
+     <en>Labeca Sheet</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>LabecaSheet</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>LabecaSheet</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-Thermal">
+    <ev_longname>
+     <en>Thermal Paper</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>Thermal</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>ThermalPaper</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/ppmtomd-MediaType-CD">
+    <ev_longname>
+     <en>CDs or CD Labels</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>CD</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>CDMaster</ev_driverval>
+   </enum_val>
+  </enum_vals>
+</option>
