@@ -1,3 +1,9 @@
+2004-01-22  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* driver/ppmtomd.xml, opt/ppmtomd-MediaType.xml,
+	  opt/ppmtomd-ColorMode.xml: Updated Foomatic data of "ppmtomd"
+	  driver to support version 1.1 of the driver.
+
 2003-12-19  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/gimp-print.xml: Added an entry for GIMP-Print which does
